# litmus-governance

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
core/: determinism.py  failure.py  state.py
docs/: README.md  checklist.md  product.yml  rules-architecture.md  rules-checklist.md  rules-output.md  rules-safety.md  workflow.md
rules/: claims.json
runs/: README.invalid
runs/f45d6f698769e8cdfc33a426a349a0e84cb398d744ae7c9782af8cdcec70b3fc/phase_0/: proof.json
runs/f45d6f698769e8cdfc33a426a349a0e84cb398d744ae7c9782af8cdcec70b3fc/phase_13/: proof.json  uncertainty.decision.json
runs/f45d6f698769e8cdfc33a426a349a0e84cb398d744ae7c9782af8cdcec70b3fc/phase_14/: language_boundary.decision.json  proof.json
runs/f45d6f698769e8cdfc33a426a349a0e84cb398d744ae7c9782af8cdcec70b3fc/phase_15/: interface.proof.json  proof.json
runs/f45d6f698769e8cdfc33a426a349a0e84cb398d744ae7c9782af8cdcec70b3fc/phase_16/: final.verdict.json  proof.json
schemas/: decision_allowlist.json
src/litmus_governance/: __init__.py  __main__.py
tests/: __init__.py
